--- a/src/autopilot_computer.html
+++ b/src/autopilot_computer.html
@@ -1,5 +1,27 @@
 {% extends "layouts/base.html" %} 
 {% block content %}
 
-Autopilot computer diagram
+<div class='grid-container'>
+  <div class='grid-item'>
+      <img class="image-swap" src='/img/products/autopilot_computer.jpg'>
+  </div>
+  <div class='resized-text'>
+    <ul>
+      <li>Original wide-spread free software solution for marine autopilot.</li>
+      <li>Raspberry pi zero solution running tinycore linux variant (tinypilot) for high reliability proven over the years.</li>
+      <li>Dust/Water tight enclosure to protect electronics.   Intended to mount in a location protected from the elements for best long-term reliability.</li>
+      <li>USB-C power connector</li>
+      <li>icm20948 inertial sensors with 3 axis of accelerometers, gyros, and compass</li>
+      <li>External 433mhz wire antenna for best remote control range</li>
+      <li>Infrared receiver for IR remote controls</li>
+      <li>Over voltage and short current protection</li>
+      <li>Reverse polarity protection</li>
+      <li>Optional usb input for GPS, Wind, or nmea data (with adapter)</li>
+      <li>Wireless connectivity supports NMEA0183 and signalk natively.  Other protocols can be converted.  See the openplotter project for more information</li>
+      <li>jlx12864 daylight visible display with backlight for status, control and configuration</li>
+      <li>buzzer to sound remote alarms</li>
+      <li>upgradable free software</li>
+    </ul>
+  </div>
+</div>
 {% endblock %}
