--- a/src/doc.html
+++ b/src/doc.html
@@ -1,6 +1,11 @@
 {% extends "layouts/base.html" %} 
 {% block content %}
 <h2>
+
+
+
+  pypilot mfd user manual
+  
   Doc here
 </h2>
 {% endblock %}
