--- a/src/motor_controllers.html
+++ b/src/motor_controllers.html
@@ -1,37 +1,49 @@
 {% extends "layouts/base.html" %} 
 {% block content %}
-<link rel="stylesheet" href="/css/motor_controllers.css">
-<div class='col2-grid'>
-  <img class="image-swap" def='regular-controller-cover.jpg' hover='regular-controller.jpg'>
-  <div>
+<div class='grid-container'>
+  <div class='grid-item'>
+      <img class="image-swap" def='regular-controller-cover.jpg' hover='regular-controller.jpg'>
+  </div>
+  <div class='grid-item'>
     <h3>pypilot motor controller</h3>
   <ul>
     <li>Handles up to 7 amps, 12 volt motors continuous</li>
     <li>Suitable for most tiller-steered boats, but can also be used for wheel steering</li>
   </ul>
+  <p>
+  The original motor controller designed in 2018.  It has logged thousands of miles and features high reliability.   Protected from reverse polarity and transients, it includes high quality components and optical isolation.  The 4 wire serial interface can be extended to mount the controller farther from the autopilot computer if needed.  For more: <a href='https://pypilot.org/schematics/hbridge_datasheet.htm'>datasheet</a> <a href='https://pypilot.org/schematics/wp_controller.pdf'>schematic</a>
   </div>
-  <img class="image-swap" def='midpower-controller-cover.jpg' hover='midpower-controller.jpg'>
-  <div>
+
+
+  <div class='grid-item'>
+    <img class="image-swap" def='midpower-controller-cover.jpg' hover='midpower-controller.jpg'>
+  </div>
+  <div class='grid-item'>
     <h3>mid-power motor controller</h3>
   <ul>
     <li>Handles up to 15 amps, 12/24 volts</li>
     <li>Suitable for larger linear actuators and smaller hydraulic pumps</li>
   </ul>
+    <p>
+      A more recent design, the mid power controller incorporates the improvements of the high power controller into a more cost-effective package.   It is essentially the same controller with half the number of mosfets, smaller connectors and fuse.
   </div>
-  <img class="image-swap" def='highpower-controller-cover.jpg' hover='highpower-controller.jpg'>
-  <div>
+  <div class='grid-item'>
+    <img class="image-swap" def='highpower-controller-cover.jpg' hover='highpower-controller.jpg'>
+  </div>
+  <div class='grid-item'>
     <h3>High power motor controller</h3>
   <ul>
     <li>Handles up to 15 amps, 12/24 volts</li>
     <li>Suitable for larger linear actuators and smaller hydraulic pumps</li>
   </ul>
+  <p>The high power motor controller has proven successful on a variety of boats especially suitable for hydraulic drives.   The high power controller uses the best quality components with a very low resistance and low standby current and  for high reliability drive.  For more: <a href='https://pypilot.org/schematics/highpower_datasheet.htm'>datasheet</a> <a href='https://pypilot.org/schematics/highpower_controller.pdf'>schematic</a>
   </div>
 </div>
 
 
 <script>
   const collection = document.getElementsByClassName("image-swap");
-  let path = '/images/products/'
+  let path = '/img/products/'
   for (let i = 0; i < collection.length; i++) {
       collection[i].src = path+collection[i].attributes['def'].value;
       collection[i].addEventListener('mouseover', function () {
